<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:orientation="vertical"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_title"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_marginTop="8dp"
            android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


    <EditText
            android:id="@+id/edit_note"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_text"
            app:layout_constraintTop_toBottomOf="@+id/edit_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <RadioGroup
            android:id="@+id/radio_group_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button_save">
        <RadioButton
                android:id="@+id/radio_button_bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_bad"/>
        <RadioButton
                android:id="@+id/radio_button_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_average"/>
        <RadioButton
                android:id="@+id/radio_button_nice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_nice"/>
    </RadioGroup>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/tasks_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_note" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/radio_group_mood"/>

</android.support.constraint.ConstraintLayout>